# The-Autonomous_Auditor_Langraph_Swarm

./: .gitignore  README.md  main.py  pyproject.toml  requirements-lock.txt
audit/report_onpeer_generated/: audit_report_20260227_1411.md  audit_report_20260228_1756.md
audit/report_onself_generated/: audit_report_20260225_1701.md  audit_report_20260225_1703.md  audit_report_20260225_1708.md  audit_report_20260225_1709.md  audit_report_20260225_1720.md  audit_report_20260225_1811.md  audit_report_20260225_1822.md  audit_report_20260225_1843.md  audit_report_20260227_1150.md  audit_report_20260227_1212.md  audit_report_20260228_1015.md  audit_report_20260228_1706.md  audit_report_20260228_1726.md  audit_report_20260228_1902.md
examples/: __init__.py  peer_audit.py  self_audit.py
langsmith_logs/: trace_20260226_143212.json  trace_20260226_143651.json  trace_20260226_143853.json  trace_20260227_102005.json  trace_20260227_112744.json  trace_20260227_115036.json  trace_20260227_121203.json  trace_20260227_141116.json  trace_20260228_101540.json  trace_20260228_170629.json  trace_20260228_172651.json  trace_20260228_175644.json  trace_20260228_190255.json
rubric/: week2_rubric.json
src/: __init__.py  graph.py  main.py  state.py
src/nodes/: __init__.py  detectives.py  judges.py  justice.py
src/tools/: __init__.py  doc_analyst.py  repo_investigator.py  vision_inspector.py
